--- a/src/main/resources/templates/mypage/my-freeboard.html
+++ b/src/main/resources/templates/mypage/my-freeboard.html
@@ -460,7 +460,9 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script th:inline="javascript">
     let myFreeBoards = [[${myFreedBoards}]];
+    let memberDTO = [[${memberDTO}]];
 </script>
 <script src="/js/mypage/my-freeboard.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
+<script src="/js/mypage/my-rank.js"></script>
 </html>
