--- a/src/main/resources/templates/mypage/my-support-list.html
+++ b/src/main/resources/templates/mypage/my-support-list.html
@@ -188,9 +188,11 @@
 </body>
 <script th:inline="javascript">
     let supports = [[${supportDTOS}]];
+    let memberDTO = [[${memberDTO}]];
 </script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/main/header.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
 <script src="/js/mypage/my-support-list.js"></script>
+<script src="/js/mypage/my-rank.js"></script>
 </html>
