--- a/src/main/resources/templates/mypage/support-request.html
+++ b/src/main/resources/templates/mypage/support-request.html
@@ -164,8 +164,10 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script th:inline="javascript">
     let mySupportRequests = [[${mySupportRequests}]];
+    let memberDTO = [[${memberDTO}]];
 </script>
 <script src="/js/main/header.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
 <script src="/js/mypage/my-support-request.js"></script>
+<script src="/js/mypage/my-rank.js"></script>
 </html>
