--- a/src/main/resources/templates/mypage/user-modify.html
+++ b/src/main/resources/templates/mypage/user-modify.html
@@ -337,4 +337,5 @@
 <script src="/js/main/header.js"></script>
 <script src="/js/mypage/user.modify.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
+<script src="/js/mypage/my-rank.js"></script>
 </html>
