--- a/src/main/resources/templates/mypage/volunteer-work-list.html
+++ b/src/main/resources/templates/mypage/volunteer-work-list.html
@@ -166,8 +166,10 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script th:inline="javascript">
     let myActivity = [[${myActivity}]];
+    let memberDTO = [[${memberDTO}]];
 </script>
 <script src="/js/main/header.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
 <script src="/js/mypage/volunteer-work-list.js"></script>
+<script src="/js/mypage/my-rank.js"></script>
 </html>
