--- a/src/main/resources/templates/mypage/my-funding-list.html
+++ b/src/main/resources/templates/mypage/my-funding-list.html
@@ -235,8 +235,10 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script th:inline="javascript">
     let myFundings = [[${myFundings}]];
+    let memberDTO = [[${memberDTO}]];
 </script>
 <script src="/js/main/header.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
 <script src="/js/mypage/my-funding-list.js"></script>
+<script src="/js/mypage/my-rank.js"></script>
 </html>
