--- a/src/main/resources/templates/mypage/my-question.html
+++ b/src/main/resources/templates/mypage/my-question.html
@@ -308,8 +308,10 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script th:inline="javascript">
     let myInquiries = [[${myInquiries}]];
+    let memberDTO = [[${memberDTO}]];
 </script>
 <script src="/js/main/header.js"></script>
 <script src="/js/mypage/my-question.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
+<script src="/js/mypage/my-rank.js"></script>
 </html>
