--- a/src/main/resources/templates/mypage/my-support-list-funding.html
+++ b/src/main/resources/templates/mypage/my-support-list-funding.html
@@ -204,9 +204,11 @@
 </body>
 <script th:inline="javascript">
     let fundings = [[${fundingPaymentDTOS}]];
+    let memberDTO = [[${memberDTO}]];
 </script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/main/header.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
 <script src="/js/mypage/my-support-list-funding.js"></script>
+<script src="/js/mypage/my-rank.js"></script>
 </html>
