--- a/src/main/resources/templates/support/support-success.html
+++ b/src/main/resources/templates/support/support-success.html
@@ -63,30 +63,9 @@
                         class="componentContain styleContain">
                         <div class="supportContain">
                             <p class="title">
-                                <strong>축하합니다. <span>63</span> 번째</strong>공식 후원자가 되셨습니다!</p><span>* 후원 내역
-                                변경은 <a href="">후원 상세</a>에서 하실 수 있습니다.</span>
-                            <div class="shareButton bWBdJI">
-                                <div class="socialMediaButton socialMediaButtons">
-                                    <div title="" role="button" class="buttonDiv"> 
-                                        <button class="shareButtonStyle"></button>
-                                    </div>
-                                    <div aria-label="twitter" role="button" tabindex="0" class="twitter">
-                                        <button class="shareBt"></button>
-                                    </div>
-                                    <div aria-label="facebook" role="button" tabindex="0" class="facebook">
-                                        <button class="facebookBt "></button>
-                                    </div>
-                                </div>
-                                <button data-clipboard-text="" class="clipBoard jwfCHG">
-                                    <div name="link" class="icon-svg">
-                                        <svg viewBox="0 0 48 48">
-                                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                                d="M42.9216 5.14287C38.7169 0.952375 31.9092 0.952375 27.8037 5.14287L19.6956 13.2246C18.9948 13.923 18.9948 15.1203 19.6956 15.9184C20.3964 16.6169 21.5977 16.6169 22.3986 15.9184L30.5077 7.83677C33.2107 5.24265 37.6146 5.24265 40.2185 8.03632C42.8204 10.6304 42.8204 14.9207 40.2185 17.5148L32.1085 25.5965C31.4087 26.2949 31.4087 27.4922 32.1085 28.2904C32.8093 28.9888 34.0116 28.9888 34.8115 28.2904L42.9216 20.2087C47.0261 16.118 47.0261 9.33337 42.9216 5.14287ZM25.6014 32.0813L17.4923 40.164C14.8894 42.9566 10.5846 43.0564 7.78146 40.4623C4.97833 37.8692 4.87822 33.5779 7.48113 30.7842C7.58124 30.6855 7.68235 30.5847 7.78146 30.4849L15.8905 22.4032C16.5913 21.7058 16.5913 20.5075 15.8905 19.7104C15.1908 19.0109 13.9884 19.0109 13.1885 19.7104L5.07844 27.791C0.973853 31.9815 0.973853 38.6674 5.07844 42.8579C9.18403 47.0474 15.9906 47.0474 20.1963 42.8579L28.3044 34.7752C29.0052 34.0768 29.0052 32.8805 28.3044 32.0813C27.6036 31.2831 26.4033 31.2831 25.6014 32.0813ZM17.9935 32.7799C17.1926 33.5781 15.9912 33.5781 15.1903 32.7799C14.3895 32.0815 14.3895 30.7844 15.1903 29.9863L30.0069 15.2197C30.7077 14.5213 31.909 14.5213 32.7099 15.2197C33.5108 15.9181 33.5108 17.2152 32.8101 18.0134L17.9935 32.7799Z">
-                                            </path>
-                                        </svg>
-                                    </div>
-                                </button>
-                            </div>
+                                <strong>축하합니다. </strong>공식 후원자가 되셨습니다!</p><span>* 후원 내역
+                                변경은 <a href="/mypage/my-support-list">후원 상세</a>에서 하실 수 있습니다.</span>
+
                         </div>
                     </div>
                 </div>
@@ -100,11 +79,4 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/customerCenter/inquiry-write.js"></script>
-<!--<script>-->
-<!--    $(document).ready(function () {-->
-<!--        $("#_header").load("../main/header.html");-->
-<!--        $("#_footer").load("../main/footer.html");-->
-<!--    });-->
-<!--</script>-->
-
 </html>
