서비스 이용약관 완료

--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="footer-link-column" style="min-width:160px">
                             <div class="footer-link-site-map-title">정책</div>
-                            <a href="#" class="link-site-map" target="_blank">
+                            <a href="/service/conditions" class="link-site-map" target="_blank">
                                 <span class="site-map-text">이용약관 소개</span>
                             </a>
                             <a href="/service/privacy" class="link-site-map" target="_blank" style="font-weight:700">
