--- a/src/main/resources/static/css/service-info/service-conditions.css
+++ b/src/main/resources/static/css/service-info/service-conditions.css
@@ -1,16 +1,18 @@
-
 @media (min-width: 1024px) {
     body > main {
         min-height: 65vh;
     }
 }
 
+
 @media (min-width: 1160px) {
     .container {
         padding: 0;
         width: 90%;
     }
+
 }
+
 
 @media (min-width: 1024px) {
     .article-container {
@@ -25,71 +27,46 @@
     }
 }
 
-@media (min-width: 1160px) {
-    .footer-inner {
-        padding: 0;
-        width: 90%;
-    }
-}
-
-body {
-    background-color: #FFFFFF;
-    color: #3d3d3d;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-    word-break: keep-all;
-}
-
-
 h1 {
     font-weight: 400;
+    font-size: 36px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+    margin: 0.67em 0;
 }
 
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-td {
-    padding: 6px 4px 6px 0;
-}
-
-strong {
+h2 {
+    font-size: 22px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
     font-weight: bold;
+    margin-top: 0;
 }
 
-a {
-    color: rgb(39, 163, 255);
-    text-decoration: none;
+h3 {
+    font-size: 18px;
+    font-weight: 600;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+    margin-top: 0;
 }
 
-.footer {
-    border-top: 1px solid #ddd;
-    margin-top: 60px;
-    padding: 30px 0;
-}
-.footer-inner {
-    font-size: 13px;
-    color: #757575;
-    max-width: 1160px;
-    margin: 0 auto;
-    padding: 0 5%;
-    display: flex;
-    justify-content: space-between;
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-.container-divider {
-    border-top: 1px solid rgba(0,0,0,0.05);
-    margin-bottom: 10px;
+.static.article h1 {
+    font-size: 32px;
 }
 
 .container {
     max-width: 1160px;
     margin: 0 auto;
     padding: 0 5%;
+}
+
+.container-divider {
+    border-top: 1px solid rgba(0,0,0,0.05);
+    margin-bottom: 10px;
 }
 
 .article-container {
@@ -100,10 +77,6 @@ a {
 .static.article {
     padding-left: 0;
     max-width: 720px;
-}
-
-.static.article h1 {
-    font-size: 32px;
 }
 
 .article-content {
@@ -118,17 +91,43 @@ a {
     margin-top: 0;
 }
 
+.article-body ol {
+    padding-left: 20px;
+    list-style-position: outside;
+    margin: 20px 0 20px 20px;
+}
+
+.article-body li {
+    padding: 3px 0;
+}
+
+.article-body ul {
+    list-style-type: disc;
+}
+
+.article-body ul {
+    padding-left: 20px;
+    list-style-position: outside;
+    margin: 20px 0 20px 20px;
+}
+
 .static.article .article-body {
     line-height: 1.8;
+    margin-top: 0;
 }
 
-.static.article .article-body table {
-    border-top: 1px solid rgba(0,0,0,0.1);
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+
+.footer {
+    border-top: 1px solid #ddd;
+    margin-top: 60px;
+    padding: 30px 0;
+}
+.footer-inner {
     font-size: 13px;
-    margin: 20px 0;
-}
-
-.static.article .article-body table td {
-    border-top: 1px solid rgba(0,0,0,0.1);
+    color: #757575;
+    max-width: 1160px;
+    margin: 0 auto;
+    padding: 0 5%;
+    display: flex;
+    justify-content: space-between;
 }
