--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -224,7 +224,7 @@
                             <a href="#"><div class="category-wrapper">펀딩</div></a>
                             <a href="/community/free-board/new"><div class="category-wrapper">커뮤니티</div></a>
                             <a href="/welfare/center/welfare-center-search"><div class="category-wrapper">복지센터</div></a>
-                            <a href="/info/service-info/service-info"><div class="category-wrapper">심봉사소개</div></a>
+                            <a href="/main/info"><div class="category-wrapper">심봉사소개</div></a>
                         </div>
 
                     </div>
