--- a/src/main/resources/templates/service-info/service-conditions.html
+++ b/src/main/resources/templates/service-info/service-conditions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>서비스 이용약관 - 심봉사</title>
     <link rel="stylesheet" href="/css/service-info/service-conditions.css">
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/main/header.css">
@@ -64,7 +64,7 @@
                                 <p>&nbsp;</p>
 
                                 <h3>제1조 목적</h3>
-                                <p>텀블벅 주식회사(이하 "회사")는 다양한 분야에 걸친 창작 프로젝트들을 통해 창작자와 후원자를 연결하고 있습니다. 회사의 주된 서비스는 창작 프로젝트의 후원을 위한 크라우드펀딩 플랫폼의 제공입니다. 이 약관은 회사의 인터넷 사이트(www.tumblbug.com) 및 응용프로그램(어플리케이션)(이하 총칭하여 "사이트"라 합니다)에서 제공하는 모든 텀블벅 서비스(이하 "서비스"라 합니다)를 이용함에 있어 회사와 회원의 권리와 의무, 책임 사항 및 회원의 서비스 이용 절차에 관한 사항을 규정함을 목적으로 합니다.</p>
+                                <p>심봉사 주식회사(이하 "회사")는 다양한 분야에 걸친 창작 프로젝트들을 통해 창작자와 후원자를 연결하고 있습니다. 회사의 주된 서비스는 창작 프로젝트의 후원을 위한 크라우드펀딩 플랫폼의 제공입니다. 이 약관은 회사의 인터넷 사이트(www.tumblbug.com) 및 응용프로그램(어플리케이션)(이하 총칭하여 "사이트"라 합니다)에서 제공하는 모든 텀블벅 서비스(이하 "서비스"라 합니다)를 이용함에 있어 회사와 회원의 권리와 의무, 책임 사항 및 회원의 서비스 이용 절차에 관한 사항을 규정함을 목적으로 합니다.</p>
                                 <p>&nbsp;</p>
                                 <h3>제2조 용어의 정의</h3>
                                 <p>① 이 약관에서 사용하는 용어의 정의는 다음과 같습니다.</p>
