--- a/src/main/resources/templates/service-info/service-info.html
+++ b/src/main/resources/templates/service-info/service-info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>서비스 소개 - 심봉사</title>
     <link rel="stylesheet" href="/css/service-info/service-info.css">
     <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
