--- a/src/main/resources/templates/service-info/service-privacy.html
+++ b/src/main/resources/templates/service-info/service-privacy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>개인정보 수집 및 이용동의 - 심봉사</title>
     <link rel="stylesheet" href="/css/service-info/service-privacy.css">
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/main/header.css">
