--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -192,6 +192,7 @@
                                 <!-- JS로 처리 -->
                             </div>
                         </th:block>
+
                         <!--로그아웃 상태-->
                         <th:block sec:authorize="!isAuthenticated()">
                         <div class="login-user-button-wrapper">
@@ -218,7 +219,7 @@
                                 </div>
                                 카테고리
                             </div>
-                            <a href="/main"><div class="category-wrapper category-select">홈</div></a>
+                            <a href="/main/"><div class="category-wrapper category-sel홈ect">홈</div></a>
                             <a href="/support/support-list"><div class="category-wrapper">후원</div></a>
                             <a href="/volunteer-work/work-list"><div class="category-wrapper">봉사</div></a>
                             <a href="#"><div class="category-wrapper">펀딩</div></a>
