--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -173,8 +173,8 @@
                             <picture>
                                 <!-- <source media="(max-width: 767px)" srcset="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50 1x, https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50 2x">
                                 <source media="(min-width: 768px)" srcset="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50"> -->
-                                <img class="m-img" src="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50">
-                                <img class="pc-img" src="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50">
+                                <img class="m-img" src="/image/main/banner.png">
+                                <img class="pc-img" src="/image/main/banner.png">
                             </picture>
                         </div>
                     </div>
