--- a/src/main/resources/templates/support/support-rice-result.html
+++ b/src/main/resources/templates/support/support-rice-result.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,26 +13,28 @@
 </head>
 <body>
     <button id="support-open" >후원하기</button>
-    <div class="support-layout-error" th:fragment="supportRiceLayoutError" style="display: none;">
-    <div class="support-rice-layout">
-        <!-- <form name=""> -->
-            <div class="suppport-rice-container-error">
-                <div class="support-rice-close-btn-layout-error">
-                    <button type="button">X</button>
-                </div>
-                    <div class="">
-                        <p>후원 가능한 <em>공양미</em>를 입력해주세요.</p>
-                    </div>
+    <th:block sec:authorize="!isAuthenticated()">
+        <div class="support-layout-error" th:fragment="supportRiceLayoutError" style="visibility: hidden;">
+            <div class="support-rice-layout">
+                <!-- <form name=""> -->
+                    <div class="suppport-rice-container-error">
+                        <div class="support-rice-close-btn-layout-error">
+                            <button type="button">X</button>
+                        </div>
+                            <div class="">
+                                <p>로그인 후 <em>이용</em>가능합니다.</p>
+                            </div>
 
-                </div>
-                <div class="support-pay-layout-error">
-                    <button type="button" class="btn-rice">
-                        <span>확인</span>
-                    </button>
-                </div>
-            <!-- </form> -->
-    </div>
-    </div>
+                        </div>
+                        <div class="support-pay-layout-error">
+                            <button type="button" class="btn-rice">
+                                <span>확인</span>
+                            </button>
+                        </div>
+                    <!-- </form> -->
+            </div>
+        </div>
+    </th:block>
     
 
 </body>
