--- a/src/main/resources/templates/mypage/rice-charge.html
+++ b/src/main/resources/templates/mypage/rice-charge.html
@@ -98,8 +98,8 @@
                 <ul>
                     <li class="rice-charge-li">
                         <div class="rice-charge-div">
-                            <div style="display: inline-block;">
-                                <img src="https://cphoto.asiae.co.kr/listimglink/1/2018030707442862782_1520376271.jpeg" alt="">
+                            <div class="charge-img-wrapper">
+                                <img src="/image/mypage/001.png" alt="">
                             </div>
                             <div class="rice-charge-content">
                                 <div class="rice-charge-explain">
@@ -116,8 +116,8 @@
                 <ul>
                     <li class="rice-charge-li">
                         <div class="rice-charge-div">
-                            <div style="display: inline-block;">
-                                <img src="https://cphoto.asiae.co.kr/listimglink/1/2018030707442862782_1520376271.jpeg" alt="">
+                            <div class="charge-img-wrapper">
+                                <img src="/image/mypage/002.png" alt="">
                             </div>
                             <div class="rice-charge-content">
                                 <div class="rice-charge-explain">
@@ -134,8 +134,8 @@
                 <ul>
                     <li class="rice-charge-li">
                         <div class="rice-charge-div">
-                            <div style="display: inline-block;">
-                                <img src="https://cphoto.asiae.co.kr/listimglink/1/2018030707442862782_1520376271.jpeg" alt="">
+                            <div class="charge-img-wrapper">
+                                <img src="/image/mypage/003.png" alt="">
                             </div>
                             <div class="rice-charge-content">
                                 <div class="rice-charge-explain">
@@ -152,8 +152,8 @@
                 <ul>
                     <li class="rice-charge-li">
                         <div class="rice-charge-div">
-                            <div style="display: inline-block;">
-                                <img src="https://cphoto.asiae.co.kr/listimglink/1/2018030707442862782_1520376271.jpeg" alt="">
+                            <div class="charge-img-wrapper">
+                                <img src="/image/mypage/004.png" alt="">
                             </div>
                             <div class="rice-charge-content">
                                 <div class="rice-charge-explain">
@@ -170,8 +170,8 @@
                 <ul>
                     <li class="rice-charge-li">
                         <div class="rice-charge-div">
-                            <div style="display: inline-block;">
-                                <img src="https://cphoto.asiae.co.kr/listimglink/1/2018030707442862782_1520376271.jpeg" alt="">
+                            <div class="charge-img-wrapper">
+                                <img src="/image/mypage/005.png" alt="">
                             </div>
                             <div class="rice-charge-content">
                                 <div class="rice-charge-explain">
@@ -188,8 +188,8 @@
                 <ul>
                     <li class="rice-charge-li">
                         <div class="rice-charge-div">
-                            <div style="display: inline-block;">
-                                <img src="https://cphoto.asiae.co.kr/listimglink/1/2018030707442862782_1520376271.jpeg" alt="">
+                            <div class="charge-img-wrapper">
+                                <img src="/image/mypage/006.png" alt="">
                             </div>
                             <div class="rice-charge-content">
                                 <div class="rice-charge-explain">
