--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -345,7 +345,7 @@
                     <div class="modal-content">본 사이트는 학습용 사이트므로 회원가입 및 서비스 이용을 금지합니다.<br>
                         위 내용을 무시하고 서비스 이용 중 손해 발생 시 저희 심봉사측은 책임 지지 않습니다.</div>
                     <div class="modal-ok-div">
-                        <button type="button" class="modal-ok">확인</button>
+                        <button type="button" class="modal-ok">동의합니다</button>
                     </div>
                 </div>
             </div>
