--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -42,8 +42,7 @@
 <div class="support-layout" style="display: none;">
     <div class="support-rice-layout"></div>
 </div>
-<!--        <div class="support-rice-layout" style="display: none;"></div>-->
-
+<div class="support-layout-error" style="visibility: hidden"></div>
 <div id="wrap">
         <div id="container">
             <div th:insert="~{customerCenter/inquiry-write.html :: inqueryModal}"></div>
