--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -219,12 +219,12 @@
                                 </div>
                                 카테고리
                             </div>
-                            <a href="/main/"><div class="category-wrapper category-sel홈ect">홈</div></a>
+                            <a href="/main/"><div class="category-wrapper category-select">홈</div></a>
                             <a href="/support/support-list"><div class="category-wrapper">후원</div></a>
                             <a href="/volunteer-work/work-list"><div class="category-wrapper">봉사</div></a>
                             <a href="#"><div class="category-wrapper">펀딩</div></a>
                             <a href="/community/free-board/new"><div class="category-wrapper">커뮤니티</div></a>
-                            <a href="/welfare/center/welfare-center-search"><div class="category-wrapper">복지센터</div></a>
+                            <a href="/welfare/center/"><div class="category-wrapper">복지센터</div></a>
                             <a href="/main/info"><div class="category-wrapper">심봉사소개</div></a>
                         </div>
 
